--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/css/uikit.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.2/jspdf.umd.min.js"></script>
     <style>
       .show-for-print {
           display: none;
@@ -49,14 +50,15 @@
         <a href="https://github.com/jacekmaciag" target="_blank" class="uk-icon-link uk-padding-small uk-padding-remove-left"
            uk-icon="icon: github"></a>
         <a id="print" class="uk-icon-link uk-padding-small uk-padding-remove-left hide-for-print" uk-icon="icon: print"></a>
+        <a id="download" class="uk-icon-link uk-padding-small uk-padding-remove-left hide-for-print" uk-icon="icon: download"></a>
       </div>
       <hr class="uk-margin-remove-top"/>
     </div>
 
     <div class="uk-container uk-margin uk-margin-top uk-background-default">
       <div class="show-for-print">
-        <div uk-grid class="uk-grid-divider uk-flex-center">
-          <div class="uk-text-large uk-padding-small">Jacek Maciąg</div>
+        <div uk-grid class="uk-flex-center">
+          <div class="uk-heading-small">Jacek Maciąg</div>
           <div>
             <div class="uk-flex uk-flex-middle">
               <span uk-icon="mail"></span>
@@ -75,7 +77,7 @@
       </div>
 
       <div class="uk-flex uk-flex-left uk-flex-middle">
-        <p class="uk-text-small uk-padding-small">
+        <p class="uk-text-medium uk-padding-small">
           Senior Ruby on Rails Engineer with over 6 years of experience in developing scalable back-end systems
           using microservices and CI/CD practices in agile environments. Proven expertise in building innovative
           solutions, enhancing performance, and leading quality assurance efforts. Dedicated to continuous improvement,
@@ -102,10 +104,10 @@
             <p>Aug 2023 - Oct 2024</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Developed critical client-facing features for Toptal's back-end using Ruby on Rails.</li>
-            <li>Owned and delivered projects, ensuring timely completion and high quality.</li>
-            <li>Researched, designed, and implemented innovative solutions to enhance platform performance.</li>
-            <li>Coordinated effectively with other teams and stakeholders to achieve project goals.</li>
+            <li class="uk-margin-remove-top">Developed critical client-facing features for Toptal's back-end using Ruby on Rails.</li>
+            <li class="uk-margin-remove-top">Owned and delivered projects, ensuring timely completion and high quality.</li>
+            <li class="uk-margin-remove-top">Researched, designed, and implemented innovative solutions to enhance platform performance.</li>
+            <li class="uk-margin-remove-top">Coordinated effectively with other teams and stakeholders to achieve project goals.</li>
           </ul>
 
           <hr class="uk-divider-small">
@@ -114,10 +116,10 @@
             <p>Oct 2020 - Aug 2023</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Coordinated quality assurance efforts among multiple teams at Toptal.</li>
-            <li>Developed automated testing scripts for client-facing systems.</li>
-            <li>Reviewed and tested new features to ensure high-quality deliverables.</li>
-            <li>Built innovative solutions to test functionality in a microservice environment.</li>
+            <li class="uk-margin-remove-top">Coordinated quality assurance efforts among multiple teams at Toptal.</li>
+            <li class="uk-margin-remove-top">Developed automated testing scripts for client-facing systems.</li>
+            <li class="uk-margin-remove-top">Reviewed and tested new features to ensure high-quality deliverables.</li>
+            <li class="uk-margin-remove-top">Built innovative solutions to test functionality in a microservice environment.</li>
           </ul>
         </div>
       </div>
@@ -139,9 +141,9 @@
             <p>Oct 2017 - Sep 2020</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Conducted front and backend testing on 20+ applications, including functional, integration, and end-to-end testing.</li>
-            <li>Deployed and maintained applications in test environments, debugging mixed tech stack apps (Java, Ruby, JS, Scala) and providing detailed bug reports.</li>
-            <li>Collaborated remotely with a global team to ensure quality assurance for Welltok, Inc.</li>
+            <li class="uk-margin-remove-top">Conducted frontend and backend testing on 20+ applications, including functional, integration, and end-to-end testing.</li>
+            <li class="uk-margin-remove-top">Deployed and maintained applications in test environments, debugging mixed tech stack apps (Java, Ruby, JS, Scala) and providing detailed bug reports.</li>
+            <li class="uk-margin-remove-top">Collaborated remotely with a global team to ensure quality assurance for Welltok, Inc.</li>
           </ul>
         </div>
       </div>
@@ -163,9 +165,9 @@
             <p>Nov 2019 - Jul 2020</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Tested company's Wordpress and Salesforce-based pages on mobile and desktop platforms.</li>
-            <li>Provided valuable insights to the client on key UX issues and recommended solutions.</li>
-            <li>Collaborated with the team at Champion Petfoods to ensure quality assurance standards were met.</li>
+            <li class="uk-margin-remove-top">Tested company's Wordpress and Salesforce-based pages on mobile and desktop platforms.</li>
+            <li class="uk-margin-remove-top">Provided valuable insights to the client on key UX issues and recommended solutions.</li>
+            <li class="uk-margin-remove-top">Collaborated with the team at Champion Petfoods to ensure quality assurance standards were met.</li>
           </ul>
         </div>
       </div>
@@ -187,15 +189,15 @@
             <p>Jun 2017 - Oct 2017</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Tested frontend and backend with automated test scripts.</li>
-            <li>Reported and analysed defects.</li>
-            <li>Developed an automated test framework (using Java, TestNG, Selenium, REST Assured/Retrofit, etc.).</li>
-            <li>Worked in a RESTful web services environment.</li>
+            <li class="uk-margin-remove-top">Tested frontend and backend with automated test scripts.</li>
+            <li class="uk-margin-remove-top">Reported and analyzed defects.</li>
+            <li class="uk-margin-remove-top">Developed an automated test framework (using Java, TestNG, Selenium, REST Assured/Retrofit, etc.).</li>
+            <li class="uk-margin-remove-top">Worked in a RESTful web services environment.</li>
           </ul>
         </div>
       </div>
 
-      <hr class="uk-margin-remove-top"/>
+      <hr class="uk-margin-remove-top hide-for-print"/>
 
       <div class="uk-card">
         <div class="uk-card-header uk-padding-remove-top">
@@ -212,12 +214,26 @@
             <p>Nov 2015 - May 2017</p>
           </div>
           <ul class="uk-list uk-list-disc">
-            <li>Designed, prepared and executed both manual and automated test scripts.</li>
-            <li>Written test plan and strategy documents</li>
-            <li>Reported and analysed defects.</li>
-            <li>Developed an automated test framework (using Java, Selenium, Serenity + Jenkins/Docker) for Corporate Actions systems.</li>
-            <li>Shared knowledge and provided help to non-business team members.</li>
-            <li>Provided assistance to UAT and production environment users.</li>
+            <li class="uk-margin-remove-top">Designed, prepared and executed both manual and automated test scripts.</li>
+            <li class="uk-margin-remove-top">Written test plan and strategy documents</li>
+            <li class="uk-margin-remove-top">Reported and analysed defects.</li>
+            <li class="uk-margin-remove-top">Developed an automated test framework (using Java, Selenium, Serenity + Jenkins/Docker) for Corporate Actions systems.</li>
+            <li class="uk-margin-remove-top">Shared knowledge and provided help to non-business team members.</li>
+            <li class="uk-margin-remove-top">Provided assistance to UAT and production environment users.</li>
+          </ul>
+
+          <hr class="uk-divider-small">
+          <div uk-grid class="uk-flex-between">
+            <p>Lead Specialist</p>
+            <p>Aug 2012 - Nov 2015</p>
+          </div>
+          <ul class="uk-list uk-list-disc">
+            <li class="uk-margin-remove-top">Responded to clients’ inquiries pertaining to Corporate Action events and related processes.</li>
+            <li class="uk-margin-remove-top">Served as an intermediary between global client base and local custodians, as well as central US depository.</li>
+            <li class="uk-margin-remove-top">Provided a diligent and timely service in accord with company’s policies.</li>
+            <li class="uk-margin-remove-top">Handled sensitive client base.</li>
+            <li class="uk-margin-remove-top">Dealt with escalated issues and complaints.</li>
+            <li class="uk-margin-remove-top">Sampled and evaluated inquiries resolved by other members of IRT team.</li>
           </ul>
         </div>
       </div>
@@ -233,8 +249,8 @@
             <p>Jul 2024 - Present</p>
           </div>
           <p>
-            An open-source Ruby implementation of the XTB API client for a leading Forex and CFD broker. T
-            he project aims to evaluate the XTB API's functionality and provide Ruby developers with a complete
+            An open-source Ruby implementation of the XTB API client for a leading Forex and CFD broker.
+            The project aims to evaluate the XTB API's functionality and provide Ruby developers with a complete
             solution to interact with the broker's API. It supports both HTTPS and WebSocket (WSS) connections.
           </p>
         </div>
@@ -245,15 +261,15 @@
       <div class="uk-card">
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
-            <p>HelpBot AI chat assistant</p>
+            <p>HelpBot AI chat assistant <span class="uk-text-meta">(as Senior Back End Engineer for Toptal)</span></p>
             <p>Feb 2022 - Oct 2024</p>
           </div>
           <p>
             Owned, planned, and developed an AI assistant to support chat conversations between customers and customer
             service representatives. The assistant used the conversation context, the company's broader business model,
             and its policies to suggest relevant responses to the representatives. It was integrated with several
-            third-party services, including ChatGPT, Slack, and Twilio, and generated numerous successful customer
-            interactions throughout its lifecycle
+            third-party services, including ChatGPT, Slack, and Twilio. It generated 1k+ customer interactions per
+            month, with adoption of approximately 20% in the sales team and 55% in the developer matching team.
           </p>
         </div>
       </div>
@@ -263,7 +279,7 @@
       <div class="uk-card">
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
-            <p>Schema Check for services utilizing GraphQL Federation architecture model</p>
+            <p>Schema Check for services utilizing GraphQL Federation architecture model <span class="uk-text-meta">(as Senior QA Automation Engineer for Toptal)</span></p>
             <p>Feb 2022 - Oct 2024</p>
           </div>
           <p>
@@ -274,6 +290,62 @@
             company. As a result, it has effectively reduced to zero the number of bugs caused by deploying
             incompatible schemas to production.
           </p>
+        </div>
+      </div>
+
+      <div class="uk-text-large uk-padding-small">Skills</div>
+
+      <div class="uk-margin-left uk-margin-right">
+        <div uk-grid class="uk-grid-divider uk-child-width-1-3">
+          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Ruby on Rails</p>
+              <span>★★★★★</span>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Software Development</p>
+              <p>★★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Problem Solving</p>
+              <p>★★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Agile Methodologies</p>
+              <p>★★★★★</p>
+            </div>
+          </div>
+
+          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
+
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Teamwork</p>
+              <p>★★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Test Automation</p>
+              <p>★★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Attention to Detail</p>
+              <p>★★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>Microservices</p>
+              <p>★★★★</p>
+            </div>
+          </div>
+
+          <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top uk-padding-remove-right">
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>GitHub</p>
+              <p>★★★★</p>
+            </div>
+            <div class="uk-grid uk-flex-between uk-margin-remove-top">
+              <p>CI/CD</p>
+              <p>★★★</p>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -315,66 +387,12 @@
         </div>
       </div>
 
-      <div class="uk-text-large uk-padding-small">Skills</div>
-
-      <div uk-grid class="uk-grid-divider uk-child-width-1-3">
-        <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top">
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Ruby on Rails</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Software Development</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Problem Solving</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Agile Methodologies</p>
-            <p>★★★★★</p>
-          </div>
-        </div>
-
-        <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top">
-
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Teamwork</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Test Automation</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Attention to Detail</p>
-            <p>★★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>Microservices</p>
-            <p>★★★★</p>
-          </div>
-        </div>
-
-        <div class="uk-card uk-card-default uk-card-body uk-padding-remove-top">
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>GitHub</p>
-            <p>★★★★</p>
-          </div>
-          <div class="uk-grid uk-flex-between uk-margin-remove-top">
-            <p>CI/CD</p>
-            <p>★★★</p>
-          </div>
-        </div>
-      </div>
-
       <div class="uk-text-large uk-padding-small">Certifications</div>
 
       <div class="uk-card">
         <div class="uk-card-header uk-padding-remove-top">
           <div class="uk-flex uk-flex-left uk-flex-middle">
-            <p class="uk-text-large uk-padding-small uk-padding-remove-vertical uk-padding-remove-left">
+            <p class="uk-text-large uk-padding-small uk-padding-remove-vertical uk-padding-remove-left uk-margin-remove-bottom">
               ISTQB® Certified Tester, Foundation Level
             </p>
           </div>
@@ -391,7 +409,7 @@
       <div class="uk-card">
         <div class="uk-card-header uk-padding-remove-top">
           <div class="uk-flex uk-flex-left uk-flex-middle">
-            <p class="uk-text-large uk-padding-small uk-padding-remove-vertical uk-padding-remove-left">
+            <p class="uk-text-large uk-padding-small uk-padding-remove-vertical uk-padding-remove-left uk-margin-remove-bottom">
               International English Language Testing System (IELTS) General Training
             </p>
           </div>
@@ -406,7 +424,7 @@
 
     </div>
     <div class="hide-for-print">
-      <div class="uk-flex uk-flex-center uk-flex-column uk-flex-middle uk-margin-bottom uk-text-meta ">
+      <div class="uk-flex uk-flex-center uk-flex-column uk-flex-middle uk-margin-bottom uk-text-meta">
         <hr class="uk-margin-remove-top"/>
         <a href="#" uk-totop uk-scroll>Back to top </a>
         <small>© 2024 Jacek Maciąg. All rights reserved :)</small>
