--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/css/uikit.min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.21.13/dist/js/uikit-icons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.2/jspdf.umd.min.js"></script>
     <style>
       .show-for-print {
           display: none;
@@ -30,9 +29,9 @@
           }
       }
     </style>
-    <script>
+    <script type="module">
       document.addEventListener('DOMContentLoaded', function () {
-        let printLink = document.getElementById('print');
+        const printLink = document.getElementById('print');
 
         printLink.addEventListener('click', function () {
           window.print();
@@ -50,7 +49,6 @@
         <a href="https://github.com/jacekmaciag" target="_blank" class="uk-icon-link uk-padding-small uk-padding-remove-left"
            uk-icon="icon: github"></a>
         <a id="print" class="uk-icon-link uk-padding-small uk-padding-remove-left hide-for-print" uk-icon="icon: print"></a>
-        <a id="download" class="uk-icon-link uk-padding-small uk-padding-remove-left hide-for-print" uk-icon="icon: download"></a>
       </div>
       <hr class="uk-margin-remove-top"/>
     </div>
