--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
       <div class="uk-flex uk-flex-left uk-flex-middle">
         <p class="uk-text-medium uk-padding-small">
-          Senior Ruby on Rails Engineer with over 6 years of experience in developing scalable back-end systems
+          Senior Ruby on Rails Engineer / QA with over 8 years of experience in developing scalable back-end systems
           using microservices and CI/CD practices in agile environments. Proven expertise in building innovative
           solutions, enhancing performance, and leading quality assurance efforts. Dedicated to continuous improvement,
-          I excel in delivering high-quality software solutions, driving team success, and collaborating across teams
+          excels in delivering high-quality software solutions, driving team success, and collaborating across teams
           to meet business goals.
         </p>
         <img src="https://github.com/jacekmaciag/jacekmaciag.github.io/blob/master/res/me.jpg?raw=true" height="150" width="150" class="uk-border-circle hide-for-print">
@@ -107,8 +107,14 @@
             <li class="uk-margin-remove-top">Researched, designed, and implemented innovative solutions to enhance platform performance.</li>
             <li class="uk-margin-remove-top">Coordinated effectively with other teams and stakeholders to achieve project goals.</li>
           </ul>
+          <div>
+            <small>
+              Tools: Ruby on Rails, RSpec, Sidekiq, Redis, SQL, PostgreSQL, Docker, Kubernetes, GitHub Actions, GCP, Jira, Confluence, Grafana, Sentry, New Relic, Datadog
+            </small>
+          </div>
 
           <hr class="uk-divider-small">
+
           <div uk-grid class="uk-flex-between">
             <p>Senior QA Automation Engineer</p>
             <p>Oct 2020 - Aug 2023</p>
@@ -119,6 +125,11 @@
             <li class="uk-margin-remove-top">Reviewed and tested new features to ensure high-quality deliverables.</li>
             <li class="uk-margin-remove-top">Built innovative solutions to test functionality in a microservice environment.</li>
           </ul>
+          <div>
+            <small>
+              Tools: Ruby on Rails, RSpec, SQL, PostgreSQL, Selenium, Cucumber, Cypress, JMe Jenkins, GitHub Actions, GCP, Jira, Confluence, Grafana
+            </small>
+          </div>
         </div>
       </div>
 
@@ -143,6 +154,11 @@
             <li class="uk-margin-remove-top">Deployed and maintained applications in test environments, debugging mixed tech stack apps (Java, Ruby, JS, Scala) and providing detailed bug reports.</li>
             <li class="uk-margin-remove-top">Collaborated remotely with a global team to ensure quality assurance for Welltok, Inc.</li>
           </ul>
+          <div>
+            <small>
+              Tools: Ruby on Rails, Selenium, Gherkin, Postman, JMeter, Jira (with Zephyr), Confluence
+            </small>
+          </div>
         </div>
       </div>
 
@@ -167,10 +183,17 @@
             <li class="uk-margin-remove-top">Provided valuable insights to the client on key UX issues and recommended solutions.</li>
             <li class="uk-margin-remove-top">Collaborated with the team at Champion Petfoods to ensure quality assurance standards were met.</li>
           </ul>
+          <div>
+            <small>
+              Tools: WordPress, JavaScript, Confluence
+            </small>
+          </div>
         </div>
       </div>
 
-      <hr class="uk-margin-remove-top"/>
+      <div style = "display:block; clear:both; page-break-after:always;"></div>
+
+      <hr class="uk-margin-remove-top hide-for-print"/>
 
       <div class="uk-card">
         <div class="uk-card-header uk-padding-remove-top">
@@ -189,9 +212,14 @@
           <ul class="uk-list uk-list-disc">
             <li class="uk-margin-remove-top">Tested frontend and backend with automated test scripts.</li>
             <li class="uk-margin-remove-top">Reported and analyzed defects.</li>
-            <li class="uk-margin-remove-top">Developed an automated test framework (using Java, TestNG, Selenium, REST Assured/Retrofit, etc.).</li>
+            <li class="uk-margin-remove-top">Developed an automated test framework.</li>
             <li class="uk-margin-remove-top">Worked in a RESTful web services environment.</li>
           </ul>
+          <div>
+            <small>
+              Tools: Java, JavaScript, TestNG, REST Assured, Retrofit, Selenium, Gherkin, JMeter, JEST, Jira (with Zephyr), Confluence, Grafana
+            </small>
+          </div>
         </div>
       </div>
 
@@ -215,24 +243,32 @@
             <li class="uk-margin-remove-top">Designed, prepared and executed both manual and automated test scripts.</li>
             <li class="uk-margin-remove-top">Written test plan and strategy documents</li>
             <li class="uk-margin-remove-top">Reported and analysed defects.</li>
-            <li class="uk-margin-remove-top">Developed an automated test framework (using Java, Selenium, Serenity + Jenkins/Docker) for Corporate Actions systems.</li>
+            <li class="uk-margin-remove-top">Developed an automated test framework for Corporate Actions systems.</li>
             <li class="uk-margin-remove-top">Shared knowledge and provided help to non-business team members.</li>
             <li class="uk-margin-remove-top">Provided assistance to UAT and production environment users.</li>
           </ul>
-
-          <hr class="uk-divider-small">
-          <div uk-grid class="uk-flex-between">
-            <p>Lead Specialist</p>
-            <p>Aug 2012 - Nov 2015</p>
+          <div>
+            <small>
+              Tools: Java, Selenium, Serenity BDD, Gherkin, Postman, Jenkins, Docker, Jira, Confluence
+            </small>
           </div>
-          <ul class="uk-list uk-list-disc">
-            <li class="uk-margin-remove-top">Responded to clients’ inquiries pertaining to Corporate Action events and related processes.</li>
-            <li class="uk-margin-remove-top">Served as an intermediary between global client base and local custodians, as well as central US depository.</li>
-            <li class="uk-margin-remove-top">Provided a diligent and timely service in accord with company’s policies.</li>
-            <li class="uk-margin-remove-top">Handled sensitive client base.</li>
-            <li class="uk-margin-remove-top">Dealt with escalated issues and complaints.</li>
-            <li class="uk-margin-remove-top">Sampled and evaluated inquiries resolved by other members of IRT team.</li>
-          </ul>
+
+          <hr class="uk-divider-small hide-for-print">
+
+          <div class="hide-for-print">
+            <div uk-grid class="uk-flex-between">
+              <p>Lead Specialist</p>
+              <p>Aug 2012 - Nov 2015</p>
+            </div>
+            <ul class="uk-list uk-list-disc">
+              <li class="uk-margin-remove-top">Responded to clients’ inquiries pertaining to Corporate Action events and related processes.</li>
+              <li class="uk-margin-remove-top">Served as an intermediary between global client base and local custodians, as well as central US depository.</li>
+              <li class="uk-margin-remove-top">Provided a diligent and timely service in accord with company’s policies.</li>
+              <li class="uk-margin-remove-top">Handled sensitive client base.</li>
+              <li class="uk-margin-remove-top">Dealt with escalated issues and complaints.</li>
+              <li class="uk-margin-remove-top">Sampled and evaluated inquiries resolved by other members of IRT team.</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -241,9 +277,14 @@
       <div class="uk-card">
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid class="uk-flex-between">
-            <a href="https://github.com/jacekmaciag/xtb" target="_blank" class="uk-link-text uk-text-medium">
-              XTB API client Ruby gem
-            </a>
+            <div class="hide-for-print">
+              <a href="https://github.com/jacekmaciag/xtb" target="_blank" class="uk-link-text uk-text-medium">
+                XTB API client Ruby gem
+              </a>
+            </div>
+            <div class="show-for-print">
+              <p>XTB API client Ruby gem (https://github.com/jacekmaciag/xtb)</p>
+            </div>
             <p>Jul 2024 - Present</p>
           </div>
           <p>
@@ -290,6 +331,8 @@
           </p>
         </div>
       </div>
+
+      <div style = "display:block; clear:both; page-break-after:always;"></div>
 
       <div class="uk-text-large uk-padding-small">Skills</div>
 
@@ -415,7 +458,7 @@
         <div class="uk-card-default uk-card-body uk-padding-remove-top">
           <div uk-grid>
             <p>British Council</p>
-            <p>Issued Sep 2017 · Expired Sep 2019</p>
+            <p>Issued Sep 2017</p>
           </div>
         </div>
       </div>
